--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/service-invoices/add-service-invoice/add-service-invoice.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/service-invoices/add-service-invoice/add-service-invoice.page.html
@@ -10,6 +10,7 @@
 </ion-header>
 <ion-content class="page-background">
   <ion-fab
+    *ngIf="permissionState.service_invoice.create"
     class="ion-margin-end"
     slot="fixed"
     vertical="top"
