--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/stock-entry/add-stock-entry/add-stock-entry.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/stock-entry/add-stock-entry/add-stock-entry.page.html
@@ -11,6 +11,7 @@
 
 <ion-content class="page-background">
   <ion-fab
+    *ngIf="permissionState.rma_stock_entry.create"
     class="ion-margin-end"
     slot="fixed"
     vertical="top"
@@ -111,6 +112,7 @@
         </ion-col>
         <ion-col class="ion-text-right" size="auto">
           <ion-button
+            *ngIf="permissionState.rma_stock_entry.create"
             color="tertiary"
             fill="outline"
             matTooltip=" ( ctrl + i ) "
