feat(Excel-rma): Update stock entry flow for issue and RnD
update serial's sold from stock entry with customer link

migration to update old serials to customers from stock entry

--- a/packages/rma-frontend/src/app/stock-entry/material-transfer/material-transfer.component.html
+++ b/packages/rma-frontend/src/app/stock-entry/material-transfer/material-transfer.component.html
@@ -131,7 +131,7 @@
                             <textarea matInput formControlName="remarks"></textarea>
                         </mat-form-field>
 
-                        <mat-form-field *ngIf="f.stock_entry_type.value === 'R&D Products'" class="example-full-width">
+                        <mat-form-field *ngIf="['R&D Products','Material Issue'].includes(f.stock_entry_type.value)" class="example-full-width">
                             <input
                               required
                               type="text"
