fix(rma-warranty): Fixed filters on Create Service Invoice page 1

--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/service-invoices/add-service-invoice/add-service-invoice.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/service-invoices/add-service-invoice/add-service-invoice.page.html
@@ -40,7 +40,7 @@
                   [matDatepicker]="posting_date"
                   placeholder="Posting Date"
                   formControlName="posting_date"
-                  (dateChange)="selectedPostingDate()"
+                  (dateChange)="selectedPostingDate($event)"
                 />
                 <mat-datepicker-toggle
                   matSuffix
