fix(rma-warranty):warranty production fixes

--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/stock-entry/add-stock-entry/add-stock-entry.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/stock-entry/add-stock-entry/add-stock-entry.page.html
@@ -227,6 +227,7 @@
                   [minimumPrice]="row.minimumPrice"
                   [type]="warrantyObject?.claim_type"
                   [item]="item"
+                  [stock_type]="row.stock_entry_type"
                 ></inline-edit>
               </sat-popover>
             </mat-cell>
