fix(rma-warranty):Modified backdated creation of Service Invoice

--- a/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/service-invoices/add-service-invoice/add-service-invoice.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/view-warranty-claims/service-invoices/add-service-invoice/add-service-invoice.page.html
@@ -119,7 +119,7 @@
                 <mat-autocomplete
                   autoActiveFirstOption
                   #contact="matAutocomplete"
-                  [displayWith]="getOption"
+                  [displayWith]="getNameOption"
                 >
                   <mat-option
                     *ngFor="let option of customerContactList | async"
