feat(rma:warranty): Service invoice for bulk claims added

--- a/packages/rma-warranty/src/app/warranty-ui/bulk-warranty-claim/bulk-warranty-claim.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/bulk-warranty-claim/bulk-warranty-claim.page.html
@@ -28,6 +28,6 @@
   </ion-card>
   <div [ngSwitch]="selectedSegment">
     <bulk-claim-details *ngSwitchCase="0"> </bulk-claim-details>
-    <bulk-service-invoices *ngSwitchCase="1"></bulk-service-invoices>
+    <service-invoices *ngSwitchCase="1"></service-invoices>
   </div>
 </ion-content>
