--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/serials/serials.component.html
@@ -74,6 +74,14 @@
                 </mat-cell>
             </ng-container>
 
+            <ng-container matColumnDef="sr_no">
+                <mat-header-cell *matHeaderCellDef>No </mat-header-cell>
+                <mat-cell *matCellDef="let row;let i=index ">
+                  {{i+1}}
+                </mat-cell>
+                <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+              </ng-container>
+
             <ng-container matColumnDef="item_name">
                 <mat-header-cell *matHeaderCellDef>Item Name</mat-header-cell>
                 <mat-cell *matCellDef="let row">
@@ -141,6 +149,14 @@
     </ion-card-header>
     <ion-card-content class="ion-no-padding">
         <mat-table #table [dataSource]="serialDataSource" style="width: 100%;">
+            <ng-container matColumnDef="sr_no">
+                <mat-header-cell *matHeaderCellDef>No </mat-header-cell>
+                <mat-cell *matCellDef="let row;let i=index ">
+                  {{i+1}}
+                </mat-cell>
+                <mat-footer-cell *matFooterCellDef></mat-footer-cell>
+              </ng-container>
+
             <ng-container matColumnDef="item_name">
                 <mat-header-cell *matHeaderCellDef>Item Name</mat-header-cell>
                 <mat-cell *matCellDef="let row">
