fix(rma-frontend): fixed table design on warranty page

--- a/packages/rma-warranty/src/app/warranty-ui/bulk-warranty-claim/bulk-claim-details/bulk-claim-details.component.scss
+++ b/packages/rma-warranty/src/app/warranty-ui/bulk-warranty-claim/bulk-claim-details/bulk-claim-details.component.scss
@@ -18,3 +18,13 @@ mat-header-cell {
   flex-wrap: nowrap;
   min-width: 100px;
 }
+
+[class*='mat-column-']{
+  flex: 0 0 7% !important;
+  min-width: 150px !important;
+}
+
+.mat-column-sr_no {
+  flex: 0 0 3% !important;
+  min-width: 10px !important;
+}
