--- a/packages/rma-warranty/src/app/warranty-ui/warranty/warranty.page.html
+++ b/packages/rma-warranty/src/app/warranty-ui/warranty/warranty.page.html
@@ -300,7 +300,7 @@
             (matSortChange)="setFilter($event)"
           >
             <ng-container matColumnDef="sr_no">
-              <mat-header-cell *matHeaderCellDef> </mat-header-cell>
+              <mat-header-cell *matHeaderCellDef>No. </mat-header-cell>
               <mat-cell *matCellDef="let row;let i=index "> {{i+1}} </mat-cell>
               <mat-footer-cell *matFooterCellDef></mat-footer-cell>
             </ng-container>
