--- a/packages/rma-warranty/src/app/warranty-ui/bulk-warranty-claim/bulk-claim-details/bulk-claim-details.component.html
+++ b/packages/rma-warranty/src/app/warranty-ui/bulk-warranty-claim/bulk-claim-details/bulk-claim-details.component.html
@@ -36,7 +36,7 @@
         [dataSource]="dataSource"
       >
         <ng-container matColumnDef="sr_no">
-          <mat-header-cell *matHeaderCellDef> </mat-header-cell>
+          <mat-header-cell *matHeaderCellDef>No. </mat-header-cell>
           <mat-cell *matCellDef="let row; let i = index">
             {{ paginator.pageIndex * paginator.pageSize + 1 + i }}
           </mat-cell>
