feat(rma-frontend): added permissions for delivered status on sales invoice page--1

--- a/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
+++ b/packages/rma-frontend/src/app/sales-ui/view-sales-invoice/details/details.component.html
@@ -207,7 +207,7 @@
           </ion-item>
         </ion-col>
       </ion-row>
-      <ion-row *ngIf="permissionState.stock_entry.accept">
+      <ion-row *ngIf="permissionState?.stock_entry?.accept">
         <ion-col size-md="6">
           <ion-item lines="none">
             <mat-form-field class="full-width">
