fix(rma-server): fixed customer name issue on sales page

--- a/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
+++ b/packages/rma-frontend/src/app/sales-ui/sales/sales.page.html
@@ -277,7 +277,7 @@
                 Customer Name
               </mat-header-cell>
               <mat-cell *matCellDef="let row">
-                {{ row.customer_name }}
+                {{ row.customer_name || row.customer }}
               </mat-cell>
               <mat-footer-cell *matFooterCellDef>Total</mat-footer-cell>
             </ng-container>
