feat(rma:frontend): Added Terms and Conditions Page 2

--- a/packages/rma-frontend/src/app/terms-and-conditions-ui/terms-and-conditions/terms-and-conditions.page.html
+++ b/packages/rma-frontend/src/app/terms-and-conditions-ui/terms-and-conditions/terms-and-conditions.page.html
@@ -62,7 +62,7 @@
               Terms and Conditions
             </mat-header-cell>
             <mat-cell *matCellDef="let row" (click)="updateTermsAndConditions(row.uuid)">
-              {{row.terms_and_conditions_name}}
+              {{row.terms_and_conditions}}
             </mat-cell>
           </ng-container>
 
