--- a/packages/rma-frontend/src/app/app.component.html
+++ b/packages/rma-frontend/src/app/app.component.html
@@ -310,7 +310,7 @@
               lines="none"
               routerLinkActive="active"
             >
-              <ion-icon slot="start" name="warning-outline"></ion-icon>
+              <ion-icon slot="start" name="document-outline"></ion-icon>
               <ion-label>Terms and Conditions</ion-label>
             </ion-item>
             </ion-list>
